--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <div class="topbar-content">
         <div class="topbar-inf">
           <header>
-            <div class="topbar-title">Fast food</div>
-            <div class="topbar-slogan">Jedz i żyj zdrowo</div>
+            <div class="topbar-title white-text">Fast food</div>
+            <div class="topbar-slogan white-text">Jedz i żyj zdrowo</div>
           </header>
         </div>
         <
@@ -188,23 +188,23 @@
     <!--CO DAJE FAST FOOD-->
 
     <div class="summary-board">
-      <div class="section-title ">
+      <div class="section-title white-text">
         Czego się dowiesz z Fast Fooda?
       </div>
 
       <div class="summary-basic-inf">
-        <span class="summary-subtitle small-text"
+        <span class="summary-subtitle small-text white-text"
           >Poznasz nowe przepisy na posiłki</span
         >
 
-        <span class="summary-basic-inf-name"
+        <span class="summary-basic-inf-name white-text"
           >Naleśniki z jagodami i nutellą</span
         >
         <div class="summary-basic-inf-time-field">
           <i class="material-icons summary-basic-inf-icon">access_time</i>
-          <span class="summary-basic-inf-time">1 h 30 min</span>
+          <span class="summary-basic-inf-time white-text">1 h 30 min</span>
         </div>
-        <span class="summmary-basic-inf-ingredients">
+        <span class="summmary-basic-inf-ingredients white-text">
           <li>1 szklanka mąki pszennej</li>
           <li>2 jajka</li>
           <li>1 szklanka mleka</li>
@@ -213,7 +213,7 @@
           <li>3 łyżki masła lub oleju roślinnego</li>
         </span>
 
-        <span class="summary-basic-inf-description">
+        <span class="summary-basic-inf-description white-text">
           <p>
             Mąkę wsypać do miski, dodać jajka, mleko, wodę i sól. Zmiksować na
             gładkie ciasto. Dodać roztopione masło lub olej roślinny i razem
@@ -231,55 +231,61 @@
 
       <div class="summary-data-field">
         <div>
-          <span class="summary-subtitle small-text"
+          <span class="summary-subtitle small-text white-text"
             >Dowiesz się, ile i czego spożyłeś</span
           >
         </div>
         <div class="summary-data">
           <div class="sumary-data-content">
-            <span class="summary-data-content-name">Energia, kcal</span>
-            <span class="summary-data-content-value">1 234</span>
+            <span class="summary-data-content-name white-text"
+              >Energia, kcal</span
+            >
+            <span class="summary-data-content-value white-text">1 234</span>
           </div>
 
           <div class="sumary-data-content">
-            <span class="summary-data-content-name">Białka, g</span>
-            <span class="summary-data-content-value">260</span>
+            <span class="summary-data-content-name white-text">Białka, g</span>
+            <span class="summary-data-content-value white-text">260</span>
           </div>
 
           <div class="sumary-data-content">
-            <span class="summary-data-content-name">Węglowodany, g</span>
-            <span class="summary-data-content-value">345</span>
+            <span class="summary-data-content-name white-text"
+              >Węglowodany, g</span
+            >
+            <span class="summary-data-content-value white-text">345</span>
           </div>
 
           <div class="sumary-data-content">
-            <span class="summary-data-content-name">Tłuszcze, g</span>
-            <span class="summary-data-content-value">560</span>
+            <span class="summary-data-content-name white-text"
+              >Tłuszcze, g</span
+            >
+            <span class="summary-data-content-value white-text">560</span>
           </div>
         </div>
       </div>
 
       <div class="summary-plan">
         <div>
-          <span class="summary-subtitle small-text"
+          <span class="summary-subtitle small-text white-text"
             >Twoje plany żywieniowe</span
           >
         </div>
 
-        <div class="summary-plan-list">
+        <div class="summary-plan-list white-text">
           <li>
-            <i class="material-icons summary-list-icon">
+            <i class="material-icons summary-list-icon white-text">
               fastfood
             </i>
             Plan na masę
           </li>
           <li>
-            <i class="material-icons summary-list-icon">
+            <i class="material-icons summary-list-icon white-text">
               favorite_border
             </i>
             Plan na odchudzanie
           </li>
           <li>
-            <i class="material-icons summary-list-icon">
+            <i class="material-icons summary-list-icon white-text">
               grade
             </i>
             Plan na lato
