--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
       </div>
     </div>
 
+    <div class="tlo"></div>
+
     <!--DLA KOGO-->
 
     <div class="section-start for-whom">
@@ -193,40 +195,45 @@
       </div>
 
       <div class="summary-basic-inf">
-        <span class="summary-subtitle small-text white-text"
-          >Poznasz nowe przepisy na posiłki</span
-        >
-
-        <span class="summary-basic-inf-name white-text"
-          >Naleśniki z jagodami i nutellą</span
-        >
-        <div class="summary-basic-inf-time-field">
-          <i class="material-icons summary-basic-inf-icon">access_time</i>
-          <span class="summary-basic-inf-time white-text">1 h 30 min</span>
+        <div class="summary-subtitle small-text white-text">
+          Poznasz nowe przepisy na posiłki
         </div>
-        <span class="summmary-basic-inf-ingredients white-text">
-          <li>1 szklanka mąki pszennej</li>
-          <li>2 jajka</li>
-          <li>1 szklanka mleka</li>
-          <li>3/4 szklanki wody (najlepiej gazowanej)</li>
-          <li>szczypta soli</li>
-          <li>3 łyżki masła lub oleju roślinnego</li>
-        </span>
 
-        <span class="summary-basic-inf-description white-text">
-          <p>
-            Mąkę wsypać do miski, dodać jajka, mleko, wodę i sól. Zmiksować na
-            gładkie ciasto. Dodać roztopione masło lub olej roślinny i razem
-            zmiksować (lub wykorzystać tłuszcz do smarowania patelni przed
-            smażeniem każdego naleśnika).
-          </p>
+        <div class="box">
+          <div class="summary-basic-inf-recipe">
+            <div class="summary-basic-inf-name white-text">
+              Naleśniki z jagodami i nutellą
+            </div>
+            <div class="summary-basic-inf-time-field">
+              <i class="material-icons summary-basic-inf-icon">access_time</i>
+              <span class="summary-basic-inf-time white-text">1 h 30 min</span>
+            </div>
 
-          <p>
-            Naleśniki smażyć na dobrze rozgrzanej patelni z cienkim dnem np.
-            naleśnikowej. Przewrócić na drugą stronę gdy spód naleśnika będzie
-            już ładnie zrumieniony i ścięty.
-          </p>
-        </span>
+            <div class="summmary-basic-inf-ingredients white-text">
+              <li>1 szklanka mąki pszennej</li>
+              <li>2 jajka</li>
+              <li>1 szklanka mleka</li>
+              <li>3/4 szklanki wody (najlepiej gazowanej)</li>
+              <li>szczypta soli</li>
+              <li>3 łyżki masła lub oleju roślinnego</li>
+            </div>
+          </div>
+
+          <div class="summary-basic-inf-description white-text">
+            <p>
+              Mąkę wsypać do miski, dodać jajka, mleko, wodę i sól. Zmiksować na
+              gładkie ciasto. Dodać roztopione masło lub olej roślinny i razem
+              zmiksować (lub wykorzystać tłuszcz do smarowania patelni przed
+              smażeniem każdego naleśnika).
+            </p>
+
+            <p>
+              Naleśniki smażyć na dobrze rozgrzanej patelni z cienkim dnem np.
+              naleśnikowej. Przewrócić na drugą stronę gdy spód naleśnika będzie
+              już ładnie zrumieniony i ścięty.
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="summary-data-field">
