--- a/index.html
+++ b/index.html
@@ -77,7 +77,14 @@
         </div>
         <
         <div class="topbar-image"><img class="main-image" /></div>
-        <div class="topbar-btn"></div>
+        <div class="topbar-user">
+          <div class="topbar-user-photo"></div>
+          <div class="topbar-user-inf">
+            "Bardzo dobra aplikacja. Ja jestem z niej w pełni zadowolony. Ma
+            faktycznie bogatą listę produktów a tych których nie ma można sobie
+            samemu dodać. Polecam aplikację w 100%."
+          </div>
+        </div>
       </div>
     </div>
 
