--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+    <!--NAWIGACJA MENU-->
     <nav>
       <div class="menu-nav">
         <a href="#about">
@@ -67,6 +68,8 @@
       </div>
     </nav>
 
+    <!---TOPBAR-->
+
     <div class="topbar">
       <div class="topbar-content">
         <div class="topbar-inf">
@@ -76,10 +79,10 @@
           </header>
         </div>
         <
-        <div class="topbar-image"><img class="main-image" /></div>
+        <div class="topbar-image"><img class="topbar-main-image" /></div>
         <div class="topbar-user">
           <div class="topbar-user-photo"></div>
-          <div class="topbar-user-inf">
+          <div class="topbar-user-inf white-text">
             "Bardzo dobra aplikacja. Ja jestem z niej w pełni zadowolony. Ma
             faktycznie bogatą listę produktów a tych których nie ma można sobie
             samemu dodać. Polecam aplikację w 100%."
@@ -93,6 +96,178 @@
       <div class="preview-element"></div>
       <div class="preview-element"></div>
       <div class="preview-element"></div>
+    </div>
+
+    <!--TWOJA WAGA W TWOICH RĘKACH-->
+
+    <div class="section-overlay section-overlay-persona1" id="slimming">
+      <div class="section-content section-title-field">
+        <div class="section-title slogan">Twoja waga <br />w Twoich rękach</div>
+        <div class="section-subtitle"></div>
+        <img class="section-screen-image screen1" />
+      </div>
+      <div class="section-content">
+        <div class="section-field">
+          <div class="section-queries greater-text">
+            <div class="section-title-query">JEŚLI....</div>
+            <li>
+              <i class="material-icons"> check </i>Prowadzisz siedzący tryb
+              życia?
+            </li>
+            <li>
+              <i class="material-icons"> check </i>Twoja aktywność jest bardzo
+              ograniczona?
+            </li>
+            <li>
+              <i class="material-icons">
+                check
+              </i>
+              <b>Chciałbyś zrzucić zbędne kilogramy</b>, ponieważ zdałeś sobie
+              sprawę, że wpływają one nie tylko twoją samoocenę, sylwetkę, ale
+              przede wszystkim na zdrowie?
+            </li>
+            <li>
+              <i class="material-icons">
+                check
+              </i>
+              Chciałbyś wiedzieć, co możesz zjeść, a co powinieneś unikać?
+            </li>
+            <li>
+              <i class="material-icons"> check </i>Nie masz czasu na wizyty u
+              dietetyczki?
+            </li>
+            <li>
+              <i class="material-icons">
+                check
+              </i>
+              Nie chcesz jeść tych samych monotonnych posiłków, które będą Ci
+              ciągle przypominać, że jesteś na diecie?
+            </li>
+          </div>
+
+          <div class="section-description">
+            Dzięki fast foodowi bycie na diecie może być fajne i lekkie.
+            Aplikacja da Ci możliwość, ułożenia samodzielnego planu
+            żywieniowego, z niskokalorycznymi, ale bardzo smacznymi i ciekawymi
+            daniami, które nie będą Cię kusić do złamania diety. Samodzielnie
+            wyliczysz ilość zapotrzebowania kalorycznego, nie martwiąc się, że
+            zjesz ich za dużo. I to wszystko bez siedzenia w długiej kolejce u
+            dietetyka.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- BĄDŹ PANEM SWOJEJ MASY-->
+
+    <div class="section-overlay section-overlay-persona2" id="mass">
+      <div class="section-content section-content-persona2">
+        <div class="section-field">
+          <div class="section-queries greater-text">
+            <div class="section-title-query">JEŚLI....</div>
+            <li>
+              <i class="material-icons"> check </i
+              ><b
+                >Jesteś aktywny, dbasz o swoje zdrowie i sylwetkę? A może
+                dopiero zaczynasz swoją przygodę ze sportem?</b
+              >
+            </li>
+            <li>
+              <i class="material-icons">
+                check
+              </i>
+              Chciałbyś w wygodny nieskomplikowany sposób liczyć ilość
+              spożywanych kalorii oraz wartości odżywczych? Ale brak ci
+              kreatywności do tworzenia smacznych posiłków?
+            </li>
+            <li>
+              <i class="material-icons">
+                check
+              </i>
+              Chciałbyś mieć pełny wgląd w swoje szczegółowe statystyki
+              spożytych kaloriii, które będą zaprezentowane w sposób czytelny i
+              estetyczny?
+            </li>
+          </div>
+
+          <div class="section-description section-description-persona2">
+            Fast food to aplikacja, która powstała z myślą o osobach, które są
+            aktywne, dbają o swoje zdrowie i sylwetkę albo pragną zmienić coś w
+            swoim dotychczasowym trybie życia. Dzięki temu osoby już aktywne
+            oraz te, które dopiero są na początku swojej przygody ze sportem
+            będą mogły w prosty sposób zaplanować co powinny i w jakiej ilości
+            jeść. Razem z aplikacją ułożysz dietę, która będzie spełniać twoje
+            wymagania na zapotrzebowanie energetyczne, a tym samym zwiększając
+            efekt twoich ćwiczeń.
+          </div>
+        </div>
+      </div>
+      <div class="section-content section-title-field">
+        <div class="section-title slogan">Bądź Panem<br />swojej masy</div>
+        <img class="section-screen-image screen2" />
+      </div>
+    </div>
+
+    <!--NUDNE POSIŁKI TO JUŻ PRZESZŁOŚĆ-->
+
+    <div class="section-overlay section-overlay-persona1" id="variety">
+      <div class="section-content section-title-field">
+        <div class="section-title slogan">
+          Nudne posiłki <br />to już przeszłość
+        </div>
+        <img class="section-screen-image screen3" />
+      </div>
+      <div class="section-content">
+        <div class="section-field">
+          <div class="section-queries greater-text">
+            <div class="section-title-query">JEŚLI....</div>
+            <li>
+              <i class="material-icons"> check </i
+              ><b
+                >Jesteś alergikiem lub wege? A może jesteś na diecie
+                zdrowotnej?</b
+              >
+            </li>
+            <li>
+              <i class="material-icons"> check </i>Chciałbyś mieć zróżnicowaną i
+              smaczną dietę, nie martwiąc się, czy dany produkt zawarty w
+              potrawie jest dla Ciebie dozwolony czy nie?
+            </li>
+            <li>
+              <i class="material-icons"> check </i>Chciałbyś mieć gotowe
+              potrawy, do których będziesz mieć dostęp za pomocą jednego
+              kliknięcia?
+            </li>
+            <li>
+              <i class="material-icons">
+                check
+              </i>
+              Chcesz poprawić swój komfort życia, a przy okazji zaoszczędzić
+              czas na szukanie pomysłów w internecie lub książkach?
+            </li>
+            <li>
+              <i class="material-icons"> check </i>Nie masz czasu na wizyty u
+              dietetyczki?
+            </li>
+            <li>
+              <i class="material-icons">
+                check
+              </i>
+              Chcesz uniknąć wyłamania się z diety, ponieważ nie wiesz co zjeść?
+            </li>
+          </div>
+
+          <div class="section-description">
+            Od teraz bycie na diecie zdrowotnej lub z ograniczeniami nie musi
+            być dla Ciebie dużym wyzwaniem. Zarówno osoby będące wege oraz te,
+            które mają problemy zdrowotne, każdego dnia będą mogły mieć
+            zróżnicowaną i smaczną dietę, przy zachowaniu restrykcyjnych zasad
+            żywieniowych. Dzięki możliwości samodzielnego stworzenia planu
+            żywieniowego będziesz jadł to co lubisz. To pozwoli Ci na uniknięcie
+            wyłamania się ze swojej diety.
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- PLANSZA CO TO JEST FAST FOOD-->
@@ -160,13 +335,9 @@
       </div>
     </div>
 
-    <!--
-
-    <div class="tlo"></div> -->
-
     <!--DLA KOGO-->
 
-    <div class="section-start for-whom">
+    <div class="section-start">
       <div class="section-title">Dla kogo Fast Food?</div>
       <div class="section-start-field">
         <div class="section-start-content">
@@ -206,7 +377,7 @@
     <!--CO DAJE FAST FOOD-->
 
     <div class="summary-board">
-      <div class="section-title section-title-background">
+      <div class="section-title section-title-background white-text">
         Czego się dowiesz z Fast Fooda?
       </div>
 
@@ -317,178 +488,6 @@
       </div>
     </div>
 
-    <!--TWOJA WAGA W TWOICH RĘKACH-->
-
-    <div class="section-overlay section-overlay-persona1" id="slimming">
-      <div class="section-content section-title-field">
-        <div class="section-title slogan">Twoja waga <br />w Twoich rękach</div>
-        <div class="section-subtitle"></div>
-        <img class="screen-image1" />
-      </div>
-      <div class="section-content">
-        <div class="section-field">
-          <div class="section-queries greater-text">
-            <div class="section-title-query">JEŚLI....</div>
-            <li>
-              <i class="material-icons"> check </i>Prowadzisz siedzący tryb
-              życia?
-            </li>
-            <li>
-              <i class="material-icons"> check </i>Twoja aktywność jest bardzo
-              ograniczona?
-            </li>
-            <li>
-              <i class="material-icons">
-                check
-              </i>
-              <b>Chciałbyś zrzucić zbędne kilogramy</b>, ponieważ zdałeś sobie
-              sprawę, że wpływają one nie tylko twoją samoocenę, sylwetkę, ale
-              przede wszystkim na zdrowie?
-            </li>
-            <li>
-              <i class="material-icons">
-                check
-              </i>
-              Chciałbyś wiedzieć, co możesz zjeść, a co powinieneś unikać?
-            </li>
-            <li>
-              <i class="material-icons"> check </i>Nie masz czasu na wizyty u
-              dietetyczki?
-            </li>
-            <li>
-              <i class="material-icons">
-                check
-              </i>
-              Nie chcesz jeść tych samych monotonnych posiłków, które będą Ci
-              ciągle przypominać, że jesteś na diecie?
-            </li>
-          </div>
-
-          <div class="section-description">
-            Dzięki fast foodowi bycie na diecie może być fajne i lekkie.
-            Aplikacja da Ci możliwość, ułożenia samodzielnego planu
-            żywieniowego, z niskokalorycznymi, ale bardzo smacznymi i ciekawymi
-            daniami, które nie będą Cię kusić do złamania diety. Samodzielnie
-            wyliczysz ilość zapotrzebowania kalorycznego, nie martwiąc się, że
-            zjesz ich za dużo. I to wszystko bez siedzenia w długiej kolejce u
-            dietetyka.
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- BĄDŹ PANEM SWOJEJ MASY-->
-
-    <div class="section-overlay section-overlay-persona2" id="mass">
-      <div class="section-content section-content-persona2">
-        <div class="section-field">
-          <div class="section-queries greater-text">
-            <div class="section-title-query">JEŚLI....</div>
-            <li>
-              <i class="material-icons"> check </i
-              ><b
-                >Jesteś aktywny, dbasz o swoje zdrowie i sylwetkę? A może
-                dopiero zaczynasz swoją przygodę ze sportem?</b
-              >
-            </li>
-            <li>
-              <i class="material-icons">
-                check
-              </i>
-              Chciałbyś w wygodny nieskomplikowany sposób liczyć ilość
-              spożywanych kalorii oraz wartości odżywczych? Ale brak ci
-              kreatywności do tworzenia smacznych posiłków?
-            </li>
-            <li>
-              <i class="material-icons">
-                check
-              </i>
-              Chciałbyś mieć pełny wgląd w swoje szczegółowe statystyki
-              spożytych kaloriii, które będą zaprezentowane w sposób czytelny i
-              estetyczny?
-            </li>
-          </div>
-
-          <div class="section-description section-description-persona2">
-            Fast food to aplikacja, która powstała z myślą o osobach, które są
-            aktywne, dbają o swoje zdrowie i sylwetkę albo pragną zmienić coś w
-            swoim dotychczasowym trybie życia. Dzięki temu osoby już aktywne
-            oraz te, które dopiero są na początku swojej przygody ze sportem
-            będą mogły w prosty sposób zaplanować co powinny i w jakiej ilości
-            jeść. Razem z aplikacją ułożysz dietę, która będzie spełniać twoje
-            wymagania na zapotrzebowanie energetyczne, a tym samym zwiększając
-            efekt twoich ćwiczeń.
-          </div>
-        </div>
-      </div>
-      <div class="section-content section-title-field">
-        <div class="section-title slogan">Bądź Panem<br />swojej masy</div>
-        <img class="screen-image2" />
-      </div>
-    </div>
-
-    <!--NUDNE POSIŁKI TO JUŻ PRZESZŁOŚĆ-->
-
-    <div class="section-overlay section-overlay-persona1" id="variety">
-      <div class="section-content section-title-field">
-        <div class="section-title slogan">
-          Nudne posiłki <br />to już przeszłość
-        </div>
-        <img class="screen-image3" />
-      </div>
-      <div class="section-content">
-        <div class="section-field">
-          <div class="section-queries greater-text">
-            <div class="section-title-query">JEŚLI....</div>
-            <li>
-              <i class="material-icons"> check </i
-              ><b
-                >Jesteś alergikiem lub wege? A może jesteś na diecie
-                zdrowotnej?</b
-              >
-            </li>
-            <li>
-              <i class="material-icons"> check </i>Chciałbyś mieć zróżnicowaną i
-              smaczną dietę, nie martwiąc się, czy dany produkt zawarty w
-              potrawie jest dla Ciebie dozwolony czy nie?
-            </li>
-            <li>
-              <i class="material-icons"> check </i>Chciałbyś mieć gotowe
-              potrawy, do których będziesz mieć dostęp za pomocą jednego
-              kliknięcia?
-            </li>
-            <li>
-              <i class="material-icons">
-                check
-              </i>
-              Chcesz poprawić swój komfort życia, a przy okazji zaoszczędzić
-              czas na szukanie pomysłów w internecie lub książkach?
-            </li>
-            <li>
-              <i class="material-icons"> check </i>Nie masz czasu na wizyty u
-              dietetyczki?
-            </li>
-            <li>
-              <i class="material-icons">
-                check
-              </i>
-              Chcesz uniknąć wyłamania się z diety, ponieważ nie wiesz co zjeść?
-            </li>
-          </div>
-
-          <div class="section-description">
-            Od teraz bycie na diecie zdrowotnej lub z ograniczeniami nie musi
-            być dla Ciebie dużym wyzwaniem. Zarówno osoby będące wege oraz te,
-            które mają problemy zdrowotne, każdego dnia będą mogły mieć
-            zróżnicowaną i smaczną dietę, przy zachowaniu restrykcyjnych zasad
-            żywieniowych. Dzięki możliwości samodzielnego stworzenia planu
-            żywieniowego będziesz jadł to co lubisz. To pozwoli Ci na uniknięcie
-            wyłamania się ze swojej diety.
-          </div>
-        </div>
-      </div>
-    </div>
-
     <footer>
       <div class="footer">
         <div class="newsletter">
@@ -530,20 +529,6 @@
         </div>
       </div>
     </footer>
-
-    <!--
-
-    <div class="gallery-field">
-      <div class="section-title">
-        Co dobrego znajdziesz w Fast Foodzie?
-      </div>
-      <div class="gallery">
-        <div class="gallery-img"></div>
-        <div class="gallery-img"></div>
-        <div class="gallery-img"></div>
-        <div class="gallery-img"></div>
-      </div>
-    </div> -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
