--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     <!-- BĄDŹ PANEM SWOJEJ MASY-->
 
-    <div class="section-overlay section-overlay-persona2" id="mass">
+    <div class="section-overlay" id="mass">
       <div class="section-content section-content-persona2">
         <div class="section-field">
           <div class="section-queries greater-text">
@@ -190,7 +190,7 @@
             </li>
           </div>
 
-          <div class="section-description section-description-persona2">
+          <div class="section-description">
             Fast food to aplikacja, która powstała z myślą o osobach, które są
             aktywne, dbają o swoje zdrowie i sylwetkę albo pragną zmienić coś w
             swoim dotychczasowym trybie życia. Dzięki temu osoby już aktywne
@@ -351,7 +351,7 @@
           </p>
         </div>
         <div class="section-start-content">
-          <i class="material-icons board-icon icon-for-whom">favorite</i>
+          <i class="material-icons board-icon">favorite</i>
           <p class="board-content-efect greater-text">
             <b>Trenujesz, jesteś aktywny?</b> <br />
             <span class="small-text"
@@ -362,7 +362,7 @@
         </div>
 
         <div class="section-start-content">
-          <i class="material-icons board-icon icon-for-whom">watch_later</i>
+          <i class="material-icons board-icon">watch_later</i>
           <p class="board-content-efect greater-text">
             <b>Jesteś alergikiem?</b> <br />
             <span class="small-text"
@@ -386,7 +386,7 @@
           Poznasz nowe przepisy na posiłki
         </div>
 
-        <div class="box">
+        <div class="summary-field">
           <div class="summary-basic-inf-recipe">
             <div class="summary-basic-inf-name white-text">
               Naleśniki z jagodami i nutellą
