--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </li>
         </a>
 
-        <div class="button greater-text">WERSJA PRÓBNA</div>
+        <div class="button greater-text white-text">WERSJA PRÓBNA</div>
       </div>
     </nav>
 
@@ -108,7 +108,7 @@
       </div>
       <div class="section-content">
         <div class="section-field">
-          <div class="section-queries greater-text">
+          <div class="section-queries">
             <div class="section-title-query">JEŚLI....</div>
             <li>
               <i class="material-icons"> check </i>Prowadzisz siedzący tryb
@@ -163,7 +163,7 @@
     <div class="section-overlay" id="mass">
       <div class="section-content section-content-persona2">
         <div class="section-field">
-          <div class="section-queries greater-text">
+          <div class="section-queries">
             <div class="section-title-query">JEŚLI....</div>
             <li>
               <i class="material-icons"> check </i
@@ -219,7 +219,7 @@
       </div>
       <div class="section-content">
         <div class="section-field">
-          <div class="section-queries greater-text">
+          <div class="section-queries">
             <div class="section-title-query">JEŚLI....</div>
             <li>
               <i class="material-icons"> check </i
@@ -532,6 +532,5 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <script src="jquery.viewportchecker.min.js"></script>
   </body>
 </html>
